# python4ds

./: README.md
Python0/ex00/: Hello.py
Python0/ex01/: format_ft_time.py
Python0/ex02/: find_ft_type.py
Python0/ex03/: NULL_not_found.py
Python0/ex04/: whatis.py
Python0/ex05/: building.py
Python0/ex06/: filterstring.py  ft_filter.py  test.py
Python0/ex07/: sos.py
Python0/ex08/: Loading.py
Python0/ex09/: LICENSE  README.md  pyproject.toml  setup.py
Python0/ex09/ft_package/: __init__.py  test.py
Python0/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
Python1/ex00/: give_bmi.py  tester.py
Python1/ex01/: array2D.py
Python1/ex03/: load_image.py  zoom.py
Python1/ex04/: rotate.py
Python1/ex05/: load_image.py  pimp_image.py  tester.py
Python2/: test.py
Python2/ex00/: load_csv.py
Python2/ex01/: aff_life.py
Python2/ex02/: aff_pop.py
Python2/ex03/: load_csv.py  projection_life.py
Python3/ex01/: S1E7.py  S1E9.py
Python3/ex02/: DiamondTrap.py
Python3/ex03/: ft_calculator.py
Python3/ex04/: ft_calculator.py
Python4/ex00/: statistics.py
Python4/ex01/: in_out.py
Python4/ex02/: callLimit.py  tester.py
Python4/ex03/: new_student.py  tester.py
