[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "Sample package for Piscine Python"
authors = [
    { name = "kuehara" }
]
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
packages = ["ft_package"]